# Snapdragon_Profiler_Ecosystem

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  test_main.py
tests/: __init__.py  test_convert_sdp_csv_to_perfetto_json.py
tools/: __init__.py
tools/converter/: __init__.py  convert_sdp_csv_to_perfetto_json.py  split_renderstage_by_process.py
